feat: Add manifest for PWA implementation

--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,7 @@
       href="/favicon-light.png"
       media="(prefers-color-scheme: light)"
     />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PWA App</title>
   </head>
